# rp2040_template_freertos

./: .gitignore  CMakeLists.txt  README.md
freertos/: CMakeLists.txt
src/: main.c
